--- a/package.json
+++ b/package.json
@@ -12,7 +12,28 @@
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
     "vue-router": "^3.5.3",
-    "vuetify": "^2.5.10"
+    "vuetify": "^2.5.10",
+
+    "@babel/polyfill": "^7.11.5",
+    "@fortawesome/fontawesome-svg-core": "^1.2.35",
+    "@fortawesome/free-solid-svg-icons": "^5.15.3",
+    "@fortawesome/vue-fontawesome": "^2.0.0",
+    "@stomp/stompjs": "^6.1.0",
+    "@vue/cli-service": "^4.5.13",
+    "babel-polyfill": "^6.26.0",
+    "file-saver": "^2.0.5",
+    "material-design-icons-iconfont": "^6.1.0",
+    "npm": "^7.13.0",
+    "sockjs-client": "^1.5.1",
+    "vis-data": "^7.1.2",
+    "vis-network": "^9.1.0",
+    "vis-util": "^5.0.2",
+    "vue-cookies": "^1.7.4",
+    "vue-head": "^2.2.0",
+    "vue-meta": "^2.4.0",
+    "vue-vis-network": "^1.0.2",
+    "vued3tree": "^5.1.0",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
