--- a/package.json
+++ b/package.json
@@ -8,44 +8,25 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@mdi/font": "^6.5.95",
     "axios": "^0.24.0",
     "core-js": "^3.6.5",
+    "material-design-icons-iconfont": "^6.1.0",
     "vue": "^2.6.11",
     "vue-router": "^3.5.3",
-    "vuetify": "^2.5.10",
-
-    "@babel/polyfill": "^7.11.5",
-    "@fortawesome/fontawesome-svg-core": "^1.2.35",
-    "@fortawesome/free-solid-svg-icons": "^5.15.3",
-    "@fortawesome/vue-fontawesome": "^2.0.0",
-    "@stomp/stompjs": "^6.1.0",
-    "@vue/cli-service": "^4.5.13",
-    "babel-polyfill": "^6.26.0",
-    "file-saver": "^2.0.5",
-    "material-design-icons-iconfont": "^6.1.0",
-    "npm": "^7.13.0",
-    "sockjs-client": "^1.5.1",
-    "vis-data": "^7.1.2",
-    "vis-network": "^9.1.0",
-    "vis-util": "^5.0.2",
-    "vue-cookies": "^1.7.4",
-    "vue-head": "^2.2.0",
-    "vue-meta": "^2.4.0",
-    "vue-vis-network": "^1.0.2",
-    "vued3tree": "^5.1.0",
-    "vuex": "^3.6.2"
+    "vuetify": "^2.5.10"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
+    "@vue/cli-service": "~4.5.13",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
     "sass": "~1.32.0",
     "sass-loader": "^10.0.0",
     "vue-cli-plugin-vuetify": "~2.4.3",
-    "vue-template-compiler": "^2.6.11",
+    "vue-template-compiler": "^2.4.4",
     "vuetify-loader": "^1.7.0"
   },
   "eslintConfig": {
