--- a/package.json
+++ b/package.json
@@ -8,15 +8,19 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.3.0",
+    "@fortawesome/free-regular-svg-icons": "^6.0.0",
+    "@fortawesome/free-solid-svg-icons": "^6.0.0",
+    "@fortawesome/vue-fontawesome": "^2.0.0",
     "@mdi/font": "^6.5.95",
     "axios": "^0.24.0",
     "core-js": "^3.6.5",
-    "material-design-icons-iconfont": "^6.1.0",
     "vue": "^2.6.11",
     "vue-router": "^3.5.3",
     "vuetify": "^2.5.10"
   },
   "devDependencies": {
+    "@fortawesome/fontawesome-free": "^6.0.0",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-service": "~4.5.13",
