--- a/docker/conf/web.xml
+++ b/docker/conf/web.xml
@@ -29,6 +29,10 @@
             <param-value>0</param-value>
         </init-param>
         <init-param>
+            <param-name>gzip</param-name>
+            <param-value>true</param-value>
+        </init-param>
+        <init-param>
             <param-name>listings</param-name>
             <param-value>false</param-value>
         </init-param>
