--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "eslint-plugin-vue": "^6.2.2",
     "sass": "~1.32.0",
     "sass-loader": "^10.0.0",
+    "vue-cli-plugin-compression": "~1.2.0",
     "vue-cli-plugin-vuetify": "~2.4.3",
     "vue-template-compiler": "^2.4.4",
     "vuetify-loader": "^1.7.0"
