--- a/package.json
+++ b/package.json
@@ -21,18 +21,23 @@
   },
   "devDependencies": {
     "@fortawesome/fontawesome-free": "^6.0.0",
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-eslint": "~4.5.0",
-    "@vue/cli-service": "~4.5.13",
+    "@vue/cli-plugin-babel": "^5.0.4",
+    "@vue/cli-plugin-eslint": "^5.0.4",
+    "@vue/cli-service": "^5.0.4",
     "babel-eslint": "^10.1.0",
-    "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^6.2.2",
+    "eslint": "^7.32.0",
+    "eslint-plugin-vue": "^7.20.0",
     "sass": "~1.32.0",
     "sass-loader": "^10.0.0",
     "vue-cli-plugin-compression": "~1.2.0",
     "vue-cli-plugin-vuetify": "~2.4.3",
     "vue-template-compiler": "^2.4.4",
     "vuetify-loader": "^1.7.0"
+  },
+  "overrides": {
+    "@vue/cli-service": {
+      "webpack-dev-server": "4.9.0"
+    }
   },
   "eslintConfig": {
     "root": true,
@@ -46,7 +51,11 @@
     "parserOptions": {
       "parser": "babel-eslint"
     },
-    "rules": {}
+    "rules": {
+      "vue/valid-v-slot": ["error", {
+        "allowModifiers": true
+      }]
+    }
   },
   "browserslist": [
     "> 1%",
