--- a/package.json
+++ b/package.json
@@ -27,8 +27,12 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^7.20.0",
+    "glob-all": "^3.3.0",
+    "prerender-spa-plugin": "^3.4.0",
+    "purgecss-webpack-plugin": "^4.1.3",
     "sass": "~1.32.0",
     "sass-loader": "^10.0.0",
+    "terser-webpack-plugin": "^5.3.1",
     "vue-cli-plugin-compression": "~1.2.0",
     "vue-cli-plugin-vuetify": "~2.4.3",
     "vue-template-compiler": "^2.4.4",
@@ -52,9 +56,12 @@
       "parser": "babel-eslint"
     },
     "rules": {
-      "vue/valid-v-slot": ["error", {
-        "allowModifiers": true
-      }]
+      "vue/valid-v-slot": [
+        "error",
+        {
+          "allowModifiers": true
+        }
+      ]
     }
   },
   "browserslist": [
