added nonblocking css loading

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@vue/cli-plugin-babel": "^5.0.4",
     "@vue/cli-plugin-eslint": "^5.0.4",
     "@vue/cli-service": "^5.0.4",
+    "async-css-plugin": "^1.1.5",
     "babel-eslint": "^10.1.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^7.20.0",
