correct docker tag to docker-compose file

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,7 @@
 version: "3.3"
 services:
   web:
+    image: andimajore/digest_frontend:latest
     container_name: digest-frontend
     build: .
     ports:
