--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.0.0",
     "@fortawesome/vue-fontawesome": "^2.0.0",
     "@mdi/font": "^6.5.95",
-    "axios": "^0.24.0",
+    "axios": "^1.6.0",
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
     "vue-router": "^3.5.3",
@@ -38,7 +38,9 @@
   "overrides": {
     "@vue/cli-service": {
       "webpack-dev-server": "4.9.0"
-    }
+    },
+    "@balel/traverse": ">=7.23.2",
+    "postcss": ">=8.4.31"
   },
   "eslintConfig": {
     "root": true,
