--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.0.0",
     "@fortawesome/vue-fontawesome": "^2.0.0",
     "@mdi/font": "^6.5.95",
-    "axios": "^1.8.2",
+    "axios": "^1.12.0",
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
     "vue-router": "^3.5.3",
@@ -40,7 +40,11 @@
       "webpack-dev-server": "4.9.0"
     },
     "@balel/traverse": ">=7.23.2",
-    "postcss": ">=8.4.31"
+    "postcss": ">=8.4.31",
+    "form-data": ">=4.0.4",
+    "http-proxy-middleware": ">=2.0.8",
+    "on-headers": ">=1.1.0",
+    "cross-spawn": ">=6.0.6"
   },
   "eslintConfig": {
     "root": true,
